# Weather_App

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
AppFiles/: weather_func.py
MyAgentFolder/: weather_agent.py
MyappFiles/: weatherapp.py
Test_File/: test.ipynb
UIApp/: st_app.py
WeatherAgentFolder/: weather_agent.py
endpoints_api/: myapp.py
