[project]
name = "weather-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.65",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
